--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "6.16.3",
     "better-auth": "^1.3.25",
     "next": "15.5.4",
     "react": "19.1.0",
