--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.22.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-label": "^2.1.7",
