--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@google/genai": "^1.22.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.16.3",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "better-auth": "^1.3.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
