--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.16.3",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -22,6 +24,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
@@ -30,6 +34,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-leaflet": "^5.0.0",
     "react-number-format": "^5.4.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -38,6 +43,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
+    "@types/leaflet-draw": "^1.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
