--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
