--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.22.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "6.16.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -31,6 +32,7 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "nuqs": "^2.7.1",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
